// 先cd到proto下，然后 protoc -I ./ user.proto  --dubbo_out=plugins=grpc+dubbo:../
// 注意：import其他proto时，import的路径和你的生成命令相关，比如上述为: -I ./ 表示在当前目录开始寻找proto文件

syntax = "proto3";

package pb;

import "user_dto.proto";

// 用户服务
service UserService {
  // 注册
  rpc Register(RegisterReq) returns (RegisterRes) {}

}

// 注册请求
message RegisterReq {
  // 账号
  string Passport  = 1;
  // 密码
  string Password  = 2;
  // 确认密码
  string Password2 = 3;
  // 邮箱
  string Email  = 4;
  // 昵称
  string Nickname  = 5;
}

// 注册结果
message RegisterRes {
  UserDTO UserDTO  = 1; // 用户信息
}
